--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -40,6 +40,7 @@
       <div class="button-section">
         <button id="metamaskBtn" class="button">Metamask</button>
         <button id="clearDataBtn" class="button">Clear local data</button>
+        <button id="addFitcoinBtn" class="button">Add Fitcoin</button>
       </div>
 
       <!-- WebSocket Messages Display - Always visible -->
