--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -12,14 +12,15 @@
 
       <!-- Login Section -->
       <div id="loginSection" class="login-section">
-        <h2>Sign in with X</h2>
+        <h2>Connect with MetaMask</h2>
         <button id="loginBtn" class="button">
-          <svg style="width: 20px; height: 20px; vertical-align: middle; margin-right: 8px" viewBox="0 0 24 24" fill="currentColor">
-            <path
-              d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"
-            />
+          <svg style="width: 20px; height: 20px; vertical-align: middle; margin-right: 8px" viewBox="0 0 318.6 318.6" fill="none">
+            <path d="M274.1 35.5l-99.5 73.9L193 65.8z" fill="#e17726" stroke="#e17726" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="m44.4 35.5 98.7 74.6-17.5-44.3z" fill="#e27625" stroke="#e27625" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="m238.3 206.8-26.5 40.6 56.7 15.6 16.3-55.3z" fill="#e27625" stroke="#e27625" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="m33.9 207.7 16.2 55.3 56.7-15.6-26.5-40.6z" fill="#e27625" stroke="#e27625" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
-          Login with X
+          Connect MetaMask
         </button>
       </div>
 
